<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp">

        <EditText
            android:id="@+id/textView_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/container"
            android:hint="@string/full_name"
            android:inputType="textEmailAddress"
            android:padding="16dp" />

        <EditText
            android:id="@+id/textView_profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/container"
            android:hint="@string/profession"
            android:inputType="textEmailAddress"
            android:padding="16dp" />

        <EditText
            android:id="@+id/textView_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/container"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="16dp" />

        <EditText
            android:id="@+id/textView_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/container"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp" />

        <EditText
            android:id="@+id/textView_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/container"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="16dp" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/container_blue"
            android:text="@string/sign_up" />
    </LinearLayout>

</ScrollView>