<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="32dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/textView_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/container"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="16dp" />

        <EditText
            android:id="@+id/textView_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/container"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/container_blue"
            android:text="@string/sign_in" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/or_sign_in_with" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/container">

            <Button
                android:id="@+id/button_sign_in_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@mipmap/ic_facebook"
                android:drawablePadding="-32dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <Button
                android:id="@+id/button_sign_in_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@mipmap/ic_gmail"
                android:drawablePadding="-32dp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/or_sign_up" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/container_red"
            android:text="@string/sign_up" />
    </LinearLayout>

</ScrollView>